--- a/files/config.properties
+++ b/files/config.properties
@@ -1,8 +1,10 @@
 felix.auto.deploy.action=install,start
 felix.log.level=1
+org.osgi.service.log.admin.loglevel=TRACE
+org.apache.felix.webconsole.internal.servlet.OsgiManager.loglevel=4
 org.osgi.service.http.port=8080
 felix.cm.dir=/opt/felix/current/configs
 felix.fileinstall.start.level=2
 org.osgi.framework.startlevel.beginning=2
-org.osgi.framework.bootdelegation=sun.*,com.sun.*,javax.swing.*
+# org.osgi.framework.bootdelegation=sun.*,com.sun.*,javax.swing.*
 org.osgi.framework.system.packages.extra=sun.misc
